/*
Copyright Â© 2021-2022 Infinite Devices GmbH, Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package infinimesh.shadow;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";


message State {
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Struct data = 2;
}

message Shadow {
  string device = 1;
  State reported = 2;
  State desired = 3;
}

message GetRequest {
  repeated string pool = 1;
}

message GetResponse {
  repeated Shadow shadow = 1;
}

message StreamShadowRequest {
  repeated string devices = 1;
  bool only_delta = 2;
}

service ShadowService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Patch(Shadow) returns (Shadow);
  rpc StreamReportedStateChanges(StreamShadowRequest)
      returns (stream Shadow);
}
